# orion_chat

./: .gitignore  README.md  install_apt.sh  package.xml  requirements.txt  setup.cfg  setup.py
launch/: orion_gz_launch.py  orion_launch.py  orion_robot_launch.py
msg/: AudioData.msg
orion_chat/: audio_player.py  audio_recorder.py  orion_chat.py  prueba.py  stt_node.py  tts_node.py
orion_chat/grafics/: grafics.py
resource/: conversation_config.json  movement_config.json  orion_prompt.json  students.json
worlds/: car_world.sdf
