<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orion_chat</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alejandro.bermudez.fajardo@gmail.com">alexoberco</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>sounddevice</exec_depend>
  <exec_depend>webrtcvad</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>python3-sounddevice</exec_depend>
  <exec_depend>python3-soundfile</exec_depend>
  <test_depend>pytest</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
